Notable changes from previous release:

In development:
	* Location of libeemd.so can be set by environment variable
	  LIBEEMD_FILE

Version 1.4:
	* Split pyeemd to a separate project
	* Python 3 support
	* Use find_library from ctypes to find libeemd
	* Switch to setuptools

For older changes, please see ChangeLog of libeemd.